--- a/my-helm-repo/templates/service.yaml
+++ b/my-helm-repo/templates/service.yaml
@@ -1,15 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "my-helm-repo.fullname" . }}
-  labels:
-    {{- include "my-helm-repo.labels" . | nindent 4 }}
+  name: my-helm-repo-svc
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "my-helm-repo.selectorLabels" . | nindent 4 }}
+    app: my-app
+  ports:
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: 80
