--- a/helm-repo-applcations/single-helm-repo-app/application.yaml
+++ b/helm-repo-applcations/single-helm-repo-app/application.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: "0.1.0"
   destination:
     server: https://kubernetes.default.svc
-    namespace: my-app-namespace
+    namespace: my-helm-repo
   syncPolicy:
     automated:
       prune: true
